--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
 
-        <i class="fa fa-bars" id="menu-icon"></i>
+        <!-- <i class="fa fa-bars" id="menu-icon"></i> -->
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
@@ -37,7 +37,7 @@
         <div class="home-content">
             <h3>Hi, Myself</h3>
             <h1>Rahul</h1>
-            <h3>And I'm a Frontend Developer</h3>
+            <h3>And I'm a <span>Frontend Developer</span></h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolor quos impedit eligendi. Pariatur
                 at quos qui fugiat! Corporis natus ex eaque nulla cupiditate optio.</p>
 
@@ -51,9 +51,66 @@
         </div>
 
         <div class="home-img">
-            <img src="./assets/images/Profile.jpg" width="400" alt="">
+            <img src="./assets/images/Profile dp.jpg" width="400" alt="">
         </div>
     </section>
+
+
+    <!-- ABOUT SECTION -->
+
+
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="./assets/images/Profile 2.png" alt="aboutpic">
+        </div>
+
+        <div class="about-content">
+            <h2 class="heading">ABOUT <span>Me</span></h2>
+            <h3>Frontend Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde perferendis magnam, veniam sunt ab ut
+                beatae facilis aspernatur sequi, recusandae voluptatem iste dignissimos fugit assumenda?</p>
+            <a href="#" class="btn">Read more</a>
+        </div>
+    </section>
+
+
+    <!-- SERVICES SECTION -->
+
+    <section class="Services" id="Services">
+        <h2 class="heading">My <span>Services</span></h2>
+
+        <div class="services-container">
+            <div class="services-box">
+                <i class="fa fa-code"></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tenetur fuga laudantium sint
+                    blanditiis totam, id repellendus, quam qui excepturi doloribus ad, voluptates magnam eaque.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+
+        <div class="services-container">
+            <div class="services-box">
+                <i class="fa fa-palette"></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tenetur fuga laudantium sint
+                    blanditiis totam, id repellendus, quam qui excepturi doloribus ad, voluptates magnam eaque.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+
+        <div class="services-container">
+            <div class="services-box">
+                <i class="fa fa-android"></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tenetur fuga laudantium sint
+                    blanditiis totam, id repellendus, quam qui excepturi doloribus ad, voluptates magnam eaque.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+
+    </section>
+
 
 
 
