--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
 </head>
 
 <body>
+
+
     <!-- HEADER PORTION -->
+
+
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
 
-        <!-- <i class="fa fa-bars" id="menu-icon"></i> -->
+        <i class="fa fa-bars" id="menu-icon"></i>
 
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
@@ -32,14 +36,17 @@
         </nav>
     </header>
 
+
     <!-- HOME SECTION -->
+
+
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hi, Myself</h3>
             <h1>Rahul</h1>
             <h3>And I'm a <span>Frontend Developer</span></h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis dolor quos impedit eligendi. Pariatur
-                at quos qui fugiat! Corporis natus ex eaque nulla cupiditate optio.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt eum ipsum, facilis, recusandae expedita
+                quae voluptas doloremque a aut adipisci dolorum voluptatem nostrum? Ab, adipisci.</p>
 
             <div class="social-media">
                 <a href="#"><i class="fa fa-facebook"></i></a>
@@ -76,7 +83,9 @@
 
     <!-- SERVICES SECTION -->
 
-    <section class="Services" id="Services">
+
+    <section class="services" id="services">
+
         <h2 class="heading">My <span>Services</span></h2>
 
         <div class="services-container">
@@ -87,31 +96,91 @@
                     blanditiis totam, id repellendus, quam qui excepturi doloribus ad, voluptates magnam eaque.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
-        </div>
 
-        <div class="services-container">
             <div class="services-box">
-                <i class="fa fa-palette"></i>
-                <h3>Web Development</h3>
+                <i class="fa fa-code"></i>
+                <h3>UI/UX Design</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tenetur fuga laudantium sint
                     blanditiis totam, id repellendus, quam qui excepturi doloribus ad, voluptates magnam eaque.</p>
                 <a href="#" class="btn">Read More</a>
             </div>
-        </div>
 
-        <div class="services-container">
             <div class="services-box">
                 <i class="fa fa-android"></i>
-                <h3>Web Development</h3>
+                <h3>Android Development</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tenetur fuga laudantium sint
-                    blanditiis totam, id repellendus, quam qui excepturi doloribus ad, voluptates magnam eaque.</p>
+                    blanditiis totam, id repellendus, quam qui excepturi doloribus ad, voluptates magnam eaque.
+                </p>
                 <a href="#" class="btn">Read More</a>
             </div>
         </div>
 
     </section>
 
+    <!-- PORTFOLIO SECTION -->
 
+    <section class="portfolio" id="portfolio">
+
+        <h2 class="heading">Latest <span>Projects</span></h2>
+
+        <div class="portfolio-container">
+
+            <div class="portfolio-box">
+                <img src="./assets/images/1.jpg" alt="img1">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <i class="fa fa-square-up-right"></i>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="./assets/images/2.jpg" alt="img2">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <i class="fa fa-square-up-right"></i>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="./assets/images/3.jpg" alt="img3">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <i class="fa fa-square-up-right"></i>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="./assets/images/4.jpg" alt="img4">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <i class="fa fa-square-up-right"></i>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="./assets/images/5.jpg" alt="img5">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <i class="fa fa-square-up-right"></i>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="./assets/images/6.jpg" alt="img6">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <i class="fa fa-square-up-right"></i>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 
     <script src="./script.js"></script>
