--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <link rel="stylesheet" href="./style.css">
 
     <!-- FONT-AWESOME -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
-        integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -49,10 +46,10 @@
                 quae voluptas doloremque a aut adipisci dolorum voluptatem nostrum? Ab, adipisci.</p>
 
             <div class="social-media">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
             </div>
             <a href="" class="btn">Download CV</a>
         </div>
@@ -90,7 +87,7 @@
 
         <div class="services-container">
             <div class="services-box">
-                <i class="fa fa-code"></i>
+                <i class="fa-solid fa-code"></i>
                 <h3>Web Development</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tenetur fuga laudantium sint
                     blanditiis totam, id repellendus, quam qui excepturi doloribus ad, voluptates magnam eaque.</p>
@@ -98,7 +95,7 @@
             </div>
 
             <div class="services-box">
-                <i class="fa fa-code"></i>
+                <i class="fa-solid fa-palette"></i>
                 <h3>UI/UX Design</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tenetur fuga laudantium sint
                     blanditiis totam, id repellendus, quam qui excepturi doloribus ad, voluptates magnam eaque.</p>
@@ -106,7 +103,7 @@
             </div>
 
             <div class="services-box">
-                <i class="fa fa-android"></i>
+                <i class="fa-brands fa-android"></i>
                 <h3>Android Development</h3>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam tenetur fuga laudantium sint
                     blanditiis totam, id repellendus, quam qui excepturi doloribus ad, voluptates magnam eaque.
@@ -130,7 +127,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <i class="fa fa-square-up-right"></i>
+                    <i class="fa-solid fa-up-right-from-square"></i>
                 </div>
             </div>
 
@@ -139,7 +136,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <i class="fa fa-square-up-right"></i>
+                    <i class="fa-solid fa-up-right-from-square"></i>
                 </div>
             </div>
 
@@ -148,7 +145,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <i class="fa fa-square-up-right"></i>
+                    <i class="fa-solid fa-up-right-from-square"></i>
                 </div>
             </div>
 
@@ -157,7 +154,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <i class="fa fa-square-up-right"></i>
+                    <i class="fa-solid fa-up-right-from-square"></i>
                 </div>
             </div>
 
@@ -166,7 +163,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <i class="fa fa-square-up-right"></i>
+                    <i class="fa-solid fa-up-right-from-square"></i>
                 </div>
             </div>
 
@@ -175,7 +172,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <i class="fa fa-square-up-right"></i>
+                    <i class="fa-solid fa-up-right-from-square"></i>
                 </div>
             </div>
 
