--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portolio Website | @RahulBharada</title>
+    <title>Portfolio Website | @RahulBharada</title>
 
     <!-- MAIN CSS -->
     <link rel="stylesheet" href="./style.css">
@@ -22,7 +22,7 @@
 
 
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#home" class="logo">Portfolio</a>
 
         <i class="fa fa-bars" id="menu-icon"></i>
 
@@ -208,7 +208,7 @@
 
     <!-- FOOTER SECTION -->
 
-    <section class="footer">
+    <footer class="footer">
         <div class="footer-text">
             <p>Copyright <span>&copy;</span> 2025 by <span>@RahulBharada</span> | All Rights Reserved.</p>
         </div>
@@ -216,7 +216,7 @@
         <div class="footer-iconTop">
             <a href="#home"><i class="fa-solid fa-angle-up"></i></a>
         </div>
-    </section>
+    </footer>
 
 
 
