--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="home-content">
             <h3>Hi, Myself</h3>
             <h1>Rahul</h1>
-            <h3>And I'm a <span>Frontend Developer</span></h3>
+            <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt eum ipsum, facilis, recusandae expedita
                 quae voluptas doloremque a aut adipisci dolorum voluptatem nostrum? Ab, adipisci.</p>
 
@@ -67,7 +67,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="./assets/images/Profile 2.png" alt="aboutpic">
+            <img src="./assets/images/Profile dp.jpg" alt="aboutpic">
         </div>
 
         <div class="about-content">
@@ -218,7 +218,11 @@
         </div>
     </footer>
 
+    <!-- SCROLL REVEAL JS -->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
+    <!-- TYPED JS -->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
     <!-- MAIN JS -->
     <script src="./script.js"></script>
